syntax = "proto3";

import "proto/pagination.proto";

option go_package = "./proto/generated";

message CreateGroupRequest {
	string name = 1;
}

message Group {
	string name = 1;
	uint32 id = 2;
	bool is_deleted = 3;
}

message GroupPaginationResponse {
	PaginationResponse meta = 1;
	repeated Group data = 2;
}

service GroupService {
	rpc DeleteGroup (ID) returns (Message) {}
	rpc CreateGroup (CreateGroupRequest) returns (Group) {}
	rpc GetAllGroups (PaginationRequest) returns (GroupPaginationResponse) {}
}
