syntax = "proto3";

option go_package = "./generated/permissions";

message PaginationRequest {
	uint32 page = 1;
	uint32 limit = 2;
}

message PaginationResponse {
	uint32 total = 1;
	uint32 page = 2;
	uint32 limit = 3;
	bool has_nextPage = 4;
	bool has_prevPage = 5;
}

message Message {
	string message = 1;
}

message ID {
	uint32 id = 1;
}

message NoParam {}
